--- a/Devs14/package.json
+++ b/Devs14/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.102.6",
+    "@react-three/fiber": "^8.15.19",
     "@tailwindcss/vite": "^4.1.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
